# gnw-evals

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SCORING_METHODOLOGY.md  inspect_output.py  pyproject.toml  simple.py
.github/workflows/: ruff.yml  test-python.yml
llm/: TASKS.md
src/gnw_evals/: core.py
src/gnw_evals/data_handlers/: __init__.py  csv_loader.py  result_exporter.py
src/gnw_evals/evaluators/: __init__.py  answer_evaluator.py  aoi_evaluator.py  data_pull_evaluator.py  dataset_evaluator.py  llm_judges.py  utils.py
src/gnw_evals/runners/: __init__.py  api.py  base.py
src/gnw_evals/utils/: config.py  eval_types.py  sheet_registry.py
tests/: test_answer_llm_judge_manual.py  test_run_evals.py
