[project]
name = "gnw-evals"
version = "0.1.0"
description = "Global Nature Watch Evaluation Framework"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "httpx",
    "langchain-anthropic",
    "langchain-core",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pytest",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
]


[tool.ruff.lint]
select = [
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "F",    # pyflakes
    "I",    # isort
    "RUF",  # ruff-specific
    "UP",   # pyupgrade
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",
]



[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnw_evals"]

[tool.uv]
default-groups = ["dev"]
